hopefully fix layout being off on mobile

--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -69,4 +69,3 @@ $break-large: 1200px
 @media all and (max-device-width: $break-small)
 	.imgfig
 		width: 100%
-		height: 25%
